force-app/main/default/objects/Job_Posting__c/fields/Company_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Text__c</fullName>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>