force-app/main/default/objects/Job_Posting__c/fields/Jooble_Id__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Id__c</fullName>
    <description>Job Posting Id coming in from Jooble.</description>
    <externalId>true</externalId>
    <label>Jooble Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>