force-app/main/default/objects/Job_Posting__c/fields/JoobleId__c.field-meta.xml
<CustomField>
    <fullName>JoobleId__c</fullName>
    <description>Job Posting Id coming in from Jooble.</description>
    <externalId>true</externalId>
    <label>Jooble Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>