force-app/main/default/objects/Job_Posting__c/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <description>True if the createdDate of the record is TODAY. For use in a List view that allows users to view only the records they just retrieved from Jooble.</description>
    <formula>DATEVALUE(CreatedDate) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New</label>
    <type>Checkbox</type>
</CustomField>