force-app/main/default/objects/Job_Posting__c/fields/Posting_URL__c.field-meta.xml
<CustomField>
    <fullName>Posting_URL__c</fullName>
    <label>Posting URL</label>
    <type>Url</type>
</CustomField>