force-app/main/default/objects/Job_Posting__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>