force-app/main/default/objects/Job_Posting__c/fields/Title_Position__c.field-meta.xml
<CustomField>
    <fullName>Title_Position__c</fullName>
    <label>Title/Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>