force-app/main/default/objects/Job_Posting__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>Shows date that job description may have been updated.</description>
    <label>Updated</label>
    <type>Date</type>
</CustomField>