force-app/main/default/objects/Job_Posting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title_Position__c</columns>
    <columns>Salary__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>