force-app/main/default/objects/Job_Posting__c/listViews/New_Job_Postings.listView-meta.xml
<ListView>
    <fullName>New_Job_Postings</fullName>
    <columns>NAME</columns>
    <columns>Company_Name_Text__c</columns>
    <columns>Title_Position__c</columns>
    <columns>Salary__c</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>New__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>New Job Postings</label>
</ListView>